[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/asteroid.png" type="Texture" id=1]
[ext_resource path="res://asteroid.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/collision1.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/collision3.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/collision2.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/Ship2Asteroid.mp3" type="AudioStream" id=6]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 0.5

[sub_resource type="CircleShape2D" id=2]
radius = 39.2001

[node name="asteroid" type="RigidBody2D"]
visible = false
position = Vector2( 0.629944, 1.25995 )
rotation = 0.00377234
collision_layer = 2
collision_mask = 31
mass = 10.0
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 10
contact_monitor = true
linear_damp = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.76202, 1.74176 )
shape = SubResource( 2 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 18.1136, 6.36807 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 128, 128 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -4.37532, -4.63479 )
scale = Vector2( 0.128645, 0.136061 )
rect = Rect2( -10, -10, 90, 90 )

[node name="bang1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="bang2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="bang3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="ship2asteroid" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="collisionTimer" type="Timer" parent="."]
one_shot = true

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="collisionTimer" to="." method="_on_collisionTimer_timeout"]
